- Добавлена рабочая поддержка регистрации пользователя - Реализованы Хэндлеры для ошибок P.S. На данный момент, не работает фильтрация запросов по неизвестной причине